Fixed spawning error when no spawn point has been set